# arraysc-

./: CMakeLists.txt  arrays.h  arrays_and_functions.cpp  assignment.cpp  loops.cpp  main.cpp  que1.cpp  trials.cpp
